--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@types/uuid": "^10.0.0",
+    "class-variance-authority": "^0.7.1",
     "next": "15.5.2",
     "next-intl": "^4.3.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "recharts": "^3.2.0"
+    "recharts": "^3.2.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
